runtime_eks/applications/us-east-1/database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
    spec:
      serviceAccountName: database
      containers:
      - name: database
        image: nicholasjackson/fake-service:v0.26.0
        ports:
        - containerPort: 9090
