runtime_eks/applications/us-east-1/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: consul-reference-grant
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: consul
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-root
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: web
      namespace: default
      port: 9090
